--- a/style.css
+++ b/style.css
@@ -23,7 +23,6 @@ html, body {
     justify-content: flex-end;
     align-items: center;
     font-size: 50px;
-    overflow: hidden;
     border: solid rgb(65, 75, 47) 2px;
     background-color: rgb(194, 207, 171);
 }
@@ -50,4 +49,16 @@ html, body {
     user-select: none;
     box-shadow: 2px 2px black;
     color: white;
+}
+
+.button:active {
+    box-shadow: none;
+    margin-left: 7px;
+    margin-top: 7px;
+    margin-right: 3px;
+    margin-bottom: 3px;
+}
+
+#button-zero {
+    width: 134px;
 }
